--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,91 @@
   <artifactId>study</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>GitStudy</name>
+  
+    <dependencies>
+    <!-- Spring的面向切面编程,提供AOP(面向切面编程)实现 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    
+    <!-- Spring提供的对AspectJ框架的整合 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!--Spring IOC的基础实现，包含访问配置文件、创建和管理bean等。-->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!--Spring提供在基础IoC功能上的扩展服务，此外还提供许多企业级服务的支持，如邮件服务、任务调度、JNDI定位、EJB集成、远程访问、缓存以及各种视图层框架的封装等. -->    
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- Spring context的扩展支持，用于MVC方面。 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- Spring的核心工具包。  -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- Spring表达式语言. -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-expression</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- 对JDBC 的简单封装  -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- 为JDBC、Hibernate、JDO、JPA等提供的一致的声明式和编程式事务管理。 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- 包含Web应用开发时，用到Spring框架时所需的核心类，包括自动载入WebApplicationContext特性的类、Struts与JSF集成类、文件上传的支持类、Filter类和大量工具辅助类。 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+
+    <!-- 包含SpringMVC框架相关的所有类。包含国际化、标签、Theme、视图展现的FreeMarker、JasperReports、 Tiles、Velocity、XSLT相关类。当然，如果你的应用使用了独立的MVC框架，则无需这个JAR文件里的任何类。 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    
+    <!-- 整合第三方的orm实现，如hibernate，ibatis，jdo以及spring 的jpa实现 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    </dependencies>
 </project>
