--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,17 @@
         <artifactId>spring-orm</artifactId>
         <version>5.0.8.RELEASE</version>
     </dependency>
+    
+    	<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		
+	<dependency>
+    	<groupId>redis.clients</groupId>
+    	<artifactId>jedis</artifactId>
+    	<version>3.2.0</version>
+	</dependency>
     </dependencies>
 </project>
