--- a/pom.xml
+++ b/pom.xml
@@ -102,5 +102,17 @@
     	<artifactId>jedis</artifactId>
     	<version>3.2.0</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-all</artifactId>
+		<version>5.15.9</version>
+	</dependency>
+		<dependency>
+		<groupId>org.apache.xbean</groupId>
+		<artifactId>xbean-spring</artifactId>
+		<version>3.16</version>
+	</dependency>
+
     </dependencies>
 </project>
