--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,20 @@
 		<artifactId>xbean-spring</artifactId>
 		<version>3.16</version>
 	</dependency>
-
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.9.5</version>
+	</dependency>
+	    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jms</artifactId>
+        <version>5.0.8.RELEASE</version>
+    </dependency>
+    	<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-pool</artifactId>
+		<version>5.15.9</version>
+	</dependency>
     </dependencies>
 </project>
