--- a/pom.xml
+++ b/pom.xml
@@ -140,5 +140,10 @@
 		<artifactId>activemq-pool</artifactId>
 		<version>5.15.9</version>
 	</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 </project>
